--- a/estilo.css
+++ b/estilo.css
@@ -41,7 +41,7 @@ nav a{
 header{
     width: 100%;
     height: 80vh;
-    background-image: url(imagenes/neon1.JPG);
+    background-image: url(imagenes/1.JPG);
     background-size: cover;
     background-position: center;
     position: relative;
