--- a/estilo3.css
+++ b/estilo3.css
@@ -42,7 +42,7 @@ nav a{
 header{
     width: 100%;
     height: 80vh;
-    background-image: url(imagenes/neon1.JPG);
+    background-image: url(imagenes/neon1.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
