--- a/estilo.css
+++ b/estilo.css
@@ -41,11 +41,11 @@ nav a{
 
 header{
     width: 100%;
-    height: 80vh;
+    height: 80px;
     background-image: url(imagenes/neon1.jpg);
     background-size: cover;
     background-position: center;
-    position: relative;
+    background-attachment: fixed;  
 }
 
 main{
