--- a/estilo.css
+++ b/estilo.css
@@ -40,12 +40,12 @@ nav a{
 }
 
 header{
-    width: 100%;
-    height: 80px;
+     width: 100%;
+    height: 80vh;
     background-image: url(imagenes/neon1.jpg);
-    background-size: cover;
+    background-size: contain;
     background-position: center;
-    background-attachment: fixed;  
+    position: relative;  
 }
 
 main{
