--- a/estilo3.css
+++ b/estilo3.css
@@ -40,10 +40,10 @@ nav a{
 }
 
 header{
-    width: 100%;
+     width: 100%;
     height: 80vh;
     background-image: url(imagenes/neon1.jpg);
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     position: relative;
 }
