--- a/estilo2.css
+++ b/estilo2.css
@@ -45,7 +45,7 @@ header{
     background-image: url(imagenes/neon1.jpg);
     background-size: contain;
     background-position: center;
-    position: relative; 
+    position: static; 
 }
 
 
